# Vedra

./: .dockerignore  .gitignore  CNAME  README.md  asset-manifest.json  docker-compose.yml  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
invenio/: .env.local.template  Makefile  app.yaml  auth_api.py  bootstrap.sh  docker-compose.yml
invenio/invenio-vedra/: pyproject.toml
invenio/invenio-vedra/invenio_vedra/: config.py  ext.py  identities.py  permissions.py
public/: index.html
server/: .env.example  README.md  dockerfile  pyproject.toml  start.sh
server/app/: auth_utils.py  config.py  deps.py  main.py  models.py  permissions.py
server/app/routes/: auth_routes.py  health.py  papers.py
src/: App.tsx  index.css
src/components/: Footer.tsx  LoginModal.tsx  Navbar.tsx  SignupModal.tsx
src/components/upload/: BasicInfoSection.tsx  FooterActionBar.tsx  FundingSection.tsx  PaymentModal.tsx  PreviewModal.tsx  PublishingInfoSection.tsx  RecommendedInfoSection.tsx  (+1 more)
src/contexts/: AuthContext.tsx  LanguageContext.tsx
src/lib/: rdm.ts
src/pages/: About.tsx  Calculator.tsx  Contact.tsx  Cookies.tsx  Dashboard.tsx  Home.tsx  Pricing.tsx  Privacy.tsx  Resource.tsx  ResourceDissertation.tsx  Services.tsx  Terms.tsx  Upload.tsx
static/css/: main.0f2c0cd0.css  main.0f2c0cd0.css.map  main.30d736e1.css  main.30d736e1.css.map
static/js/: main.0fbc8a0d.js  main.0fbc8a0d.js.map  main.bf57687e.js  main.bf57687e.js.map  main.c9f0be43.js  main.c9f0be43.js.map  main.f57c6d26.js  main.f57c6d26.js.map
