[project]
name = "vedra-server"
version = "0.1.0"
description = "Vedra backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic[email]",
  "pydantic-settings",
  "python-multipart",
  "SQLAlchemy>=2.0",
  "psycopg[binary]",
  "alembic",
  "httpx",
  "python-jose[cryptography]",
  "passlib[bcrypt]"
]

[tool.uvicorn]
factory = true